      page (Arnaud Boudou).
    * RFE #1227895 : Address Translation (Tim Gerundt).
    * RFE #985428  : Folder Creation ad forward multiple messages (Arnaud
      Boudou).
    * RFE #798725  : Nocc with htmlarea (Arnaud Boudou).
    * RFE #495879  : User Access List / From Address (Arnaud Boudou).
    * RFE #473980  : Caching of folder contents (Arnaud Boudou).

  Misc
    * Improve RSS handling (Arnaud Boudou).
    * Add mail controls (delete, select all, etc.) to the bottom of the INBOX
      page (Arnaud Boudou).
    * Improve remote pictures handling (Arnaud Boudou).

NOCC 1.2    July 01, 2006

    * Add lang and theme choice to preferences section (Arnaud Boudou).
    * Disable distant pictures display by default (Arnaud Boudou).
    * Fix HTML entities translation and replies formating (Arnaud Boudou).
    * Bug #1477984 : Mark as (Un)read, how can one see it works? (Arnaud
      Boudou).
    * Bug #1444882 : NOCC display source code instead of form (Arnaud Boudou). 

NOCC 1.1    February 28, 2006

    * Patch #1438939 : get_default_from_address in conf.php (Roman Korolyov).
    * Patch #1438393 : strict UTF-8 charset issue (Roman Korolyov).
    * register_globals php directive must now be set to 'Off' (Arnaud Boudou).
    * Bug #1438276 : Multiple vunerabilities (Arnaud Boudou).
    * Fix issue with outgoing mail From, To, CC and BCC encoding (Arnaud Boudou).
    * Fix issue with outgoing mail subject encoding (Arnaud Boudou).
    * Bug #1421767 : Attachments name repeat (Arnaud Boudou).
    * Bug #1409322 : Forwarding mail (Arnaud Boudou).
    * Use standardized RSS icon (Arnaud Boudou).

NOCC 1.0    January 01, 2006

    * Clean PHP code (Arnaud Boudou).
    * Fix issues with attachment downloading (Arnaud Boudou).
    * Update Italian translation (daiceman, patch #1369275).
    * Doesn't display link to contacts list if $conf->prefs_dir is empty (Arnaud
      Boudou).
    * Fix Javascript issues (Arnaud Boudou).