@@ -1,6 +1,6 @@
 <?php
 /*
- * $Header: /cvsroot/nocc/nocc/webmail/rss.php,v 1.12 2006/10/10 12:52:52 goddess_skuld Exp $
+ * $Header: /cvsroot/nocc/nocc/webmail/rss.php,v 1.13 2006/10/25 09:23:46 goddess_skuld Exp $
  *
  * Copyright 2001 Nicolas Chalanset <nicocha@free.fr>
  * Copyright 2001 Olivier Cahagne <cahagn_o@epita.fr>
@@ -78,10 +78,10 @@
     xmlns:content="http://purl.org/rss/1.0/modules/content/"
     xmlns="http://purl.org/rss/1.0/">
 
-  <channel rdf:about="<?php echo $conf->webmail_url ?>">
+  <channel rdf:about="<?php echo $conf->base_url ?>">
     <title>NOCC Webmail - <?php echo $_SESSION['nocc_folder'] ?></title>
     <description>Your mailbox</description>
-    <link><?php echo $conf->webmail_url ?></link>
+    <link><?php echo $conf->base_url ?></link>
     <dc:language><?php echo $_SESSION['nocc_lang'] ?></dc:language>
     <dc:creator></dc:creator>
     <dc:rights></dc:rights>
@@ -97,7 +97,7 @@
 <?php
 while ($tmp = array_shift($tab_mail)) {
 ?>
-        <rdf:li rdf:resource="<?php echo $conf->webmail_url . 'action.php?action=aff_mail&amp;mail='.$tmp['number'].'&amp;verbose=0&amp;rss=true' ?>" />
+        <rdf:li rdf:resource="<?php echo $conf->base_url . 'action.php?action=aff_mail&amp;mail='.$tmp['number'].'&amp;verbose=0&amp;rss=true' ?>" />
 <?php
 }
 $tab_mail = $tab_mail_bak;
@@ -109,16 +109,16 @@ $tab_mail = $tab_mail_bak;
 <?php
 while ($tmp = array_shift($tab_mail)) {
 ?>
-  <item rdf:about="<?php echo $conf->webmail_url . 'action.php?action=aff_mail&amp;mail='.$tmp['number'].'&amp;verbose=0&amp;rss=true&amp;nocc_folder='.$_SESSION['nocc_folder'] ?>">
+  <item rdf:about="<?php echo $conf->base_url . 'action.php?action=aff_mail&amp;mail='.$tmp['number'].'&amp;verbose=0&amp;rss=true&amp;nocc_folder='.$_SESSION['nocc_folder'] ?>">
     <title><?php echo htmlspecialchars($tmp['subject']) ?></title>
-    <link><?php echo $conf->webmail_url . 'action.php?action=aff_mail&amp;mail=' . $tmp['number'] . '&amp;verbose=0&amp;rss=true' ?></link>
+    <link><?php echo $conf->base_url . 'action.php?action=aff_mail&amp;mail=' . $tmp['number'] . '&amp;verbose=0&amp;rss=true' ?></link>
     <!--dc:date></dc:date-->
     <dc:language><?php echo $_SESSION['nocc_lang'] ?></dc:language>
     <dc:creator><?php echo htmlspecialchars($tmp['from']) ?></dc:creator>
     <dc:subject>Email</dc:subject>
     <description>
       <![CDATA[
-        <?php echo str_replace("themes/", $conf->webmail_url . "themes/", $tmp['attach']) ?> <?php echo $html_size . ": " . $tmp['size'] . " " . $html_kb ?> <br /><br />
+        <?php echo str_replace("themes/", $conf->base_url . "themes/", $tmp['attach']) ?> <?php echo $html_size . ": " . $tmp['size'] . " " . $html_kb ?> <br /><br />
         <?php
           $attach_tab = array();
           $content = aff_mail($pop, $attach_tab, $tmp['number'], 0, $ev);
@@ -132,7 +132,7 @@ while ($tmp = array_shift($tab_mail)) {
     </description>
     <content:encoded>
       <![CDATA[
-        <?php echo str_replace("themes/", $conf->webmail_url . "themes/", $tmp['attach']) ?> <?php echo $html_size . ": " . $tmp['size'] . " " . $html_kb ?> <br /><br />
+        <?php echo str_replace("themes/", $conf->base_url . "themes/", $tmp['attach']) ?> <?php echo $html_size . ": " . $tmp['size'] . " " . $html_kb ?> <br /><br />
         <?php
           $attach_tab = array();
           $content = aff_mail($pop, $attach_tab, $tmp['number'], 0, $ev);
